--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "framer-motion": "^10.16.4",
     "next": "13.4.19",
     "postcss": "8.4.28",
+    "postcss-nested": "^7.0.2",
+    "postcss-nesting": "^13.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
